# 6502

./: .gitignore  6502.cpp  6502.hpp  CMakeLists.txt  LICENSE  README.md
include/: 6502.hpp
src/: config.cpp  cpu.cpp
src/tests/: main.cpp
tests/: main.cpp
